k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-service
  labels:
    app: notification-service
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: traefik
  rules:
    - host: sau-portal.de
      http:
        paths:
          - path: ${NOTIFICATION_SERVICE_BASE_PATH}
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8080
